tests/parser/invalid/syntax_errors/test_missing_operator.src
x 10;
y z;
1 2;
a b c;